Uupdated signature items swagger and code
