# Api_Site/api/routes/LanguagesRoutes.js
@@ -4,7 +4,7 @@ module.exports = function(webserver) {
     webserver.route('/MailEnhancement/api/v1/Languages')
         .post(controller.create_a_Language)
         .get(controller.get_all_Languages);
-    webserver.route('/MailEnhancement/api/v1/Languages/:LanguageId')
+    webserver.route('/MailEnhancement/api/v1/Languages/:Id')
         .get(controller.read_a_Language)
         .put(controller.update_a_Language)
         .delete(controller.delete_a_Language);
