# Api_Site/api/routes/SignatureItemsRoutes.js
@@ -10,7 +10,7 @@ module.exports = function (webserver) {
         .delete(controller.delete_a_SignatureItem);
     webserver.route('/MailEnhancement/api/v1/SignatureItems/EmailAddress/:EmailAddress')
         .get(controller.read_all_SignatureItems_for_emailAddr);
-    webserver.route('/MailEnhancement/api/v1/SignatureItems/ContactTypes/:ContactTypeId')
+    webserver.route('/MailEnhancement/api/v1/SignatureItems/ContactTypes/:Id')
         .get(controller.read_all_SignatureItems_for_contactTypeId);
 
 };
